resolved a layout problem when printing in landscape orientation

--- a/generator/css/card-size.css
+++ b/generator/css/card-size.css
@@ -31,17 +31,6 @@
     flex-wrap: wrap;
 }
 
-@media print {
-    .page.landscape {
-        transform: rotate(-90deg) translateX(-100%); 
-        -moz-transform: rotate(-90deg) translateX(-100%);
-        transform: rotate(-90deg) translateX(-100%);
-        transform-origin: top left; 
-        -moz-transform-origin: top left;
-        transform-origin: top left;
-    }
-}
-
 /* A4 paper area */
 /* Chrome has problems with page sizes given in metric units. Make the paper area slightly smaller to work around this. */
 page[size="A4"] {
